# BlueMoonLite

BlueMoonLiteAndroid/: build.gradle.kts  settings.gradle.kts
BlueMoonLiteAndroid/app/: build.gradle.kts
BlueMoonLiteAndroid/app/src/androidTest/java/com/subhranil/bluemoon/lite/: ExampleInstrumentedTest.kt
BlueMoonLiteAndroid/app/src/main/: AndroidManifest.xml
BlueMoonLiteAndroid/app/src/main/java/com/subhranil/bluemoon/lite/: MainActivity.kt  MyApp.kt
BlueMoonLiteAndroid/app/src/main/java/com/subhranil/bluemoon/lite/components/: DeviceInfoScreen.kt  LinearDrive.kt  LinearEntries.kt  PullToRefreshLazyColumn.kt
BlueMoonLiteAndroid/app/src/main/java/com/subhranil/bluemoon/lite/di/: AppModule.kt
BlueMoonLiteAndroid/app/src/main/res/drawable/: doc_icon.xml  dwg_icon.xml  folder_symlink_icon.xml  google_doc_icon.xml  google_sheets_icon.xml  google_slides_icon.xml
BlueMoonLiteAndroid/app/src/main/res/values/: strings.xml  themes.xml
BlueMoonLiteAndroid/app/src/test/java/com/subhranil/bluemoon/lite/: ExampleUnitTest.kt
BlueMoonLiteAndroid/gradle/: libs.versions.toml
BlueMoonLiteAndroid/gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/gui/: mod.rs  qr.rs
server/src/main_server/: basic_info.rs  drive.rs  fs_entry.rs  mod.rs  query_params.rs  server.rs  server_info.rs
server/src/main_server/api/: basic_info.rs  delete.rs  download_entry.rs  get_drives.rs  get_entries.rs  mkdir.rs  mod.rs  upload_entry.rs
server/src/utils/: logging.rs  mod.rs  my_error.rs
(+62 files in other folders)
