[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }

axum = { version = "0.8.1" , features = ["multipart"] }
colored = "3.0.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
sysinfo = "0.33.1"
eframe = "0.31.0"
tower-http = { version = "0.6.2", features = ["fs"] }
trash = "5.2.1"
#log = "0.4.25"
chrono = "0.4.39"
#qrcode = "0.14.1"
qrcodegen = "1.8.0"
local-ip-address = "0.6.3"
image = "0.24.9"
once_cell = "1.20.3"



